// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns empty array if no available regions 1`] = `
Object {
  "loading": false,
  "regions": Array [],
}
`;

exports[`returns formatted regions 1`] = `
Object {
  "loading": false,
  "regions": Array [
    Object {
      "disabled": true,
      "hidden": true,
      "label": "",
      "value": "",
    },
    Object {
      "key": 1,
      "label": "New York",
      "value": "NY",
    },
    Object {
      "key": 2,
      "label": "Texas",
      "value": "TX",
    },
  ],
}
`;

exports[`returns formatted regions with id as the key 1`] = `
Object {
  "loading": false,
  "regions": Array [
    Object {
      "disabled": true,
      "hidden": true,
      "label": "",
      "value": "",
    },
    Object {
      "key": 1,
      "label": "New York",
      "value": 1,
    },
    Object {
      "key": 2,
      "label": "Texas",
      "value": 2,
    },
  ],
}
`;

exports[`returns placeholder option while loading 1`] = `
Object {
  "loading": true,
  "regions": Array [
    Object {
      "label": "Loading Regions...",
      "value": "",
    },
  ],
}
`;

exports[`should return loading state if data is not available 1`] = `
Object {
  "loading": false,
  "regions": Array [
    Object {
      "label": "Loading Regions...",
      "value": "",
    },
  ],
}
`;
